fixed and styled paper scrollbar

--- a/EGM_Shiny/www/styles_design1.css
+++ b/EGM_Shiny/www/styles_design1.css
@@ -11,6 +11,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
     margin: 0;
     padding: 0;
+    min-width: 1200px;
 }
 
 /* Reset Shiny default container padding */
@@ -33,7 +34,7 @@ body {
 /* ------------------------------------------- */
 .header-title {
     text-align: center; 
-    margin-bottom: 50px; 
+    margin-bottom: 20px; 
     color: white; 
     font-size: 42px; 
     letter-spacing: 2px;
@@ -206,6 +207,7 @@ body {
     background: #0a0e27;
     /* height: calc(100% - 80px); */
     height: 900px;
+    width: 740px;
 }
 
 /* Header area above the plot */
@@ -406,6 +408,42 @@ body {
     background:#FFC0CB !important;
     color:#252a36 !important;
 }
+
+/* paper section scrollbar */
+
+/* WebKit browsers */
+@supports selector(::-webkit-scrollbar) {
+    .paper-list::-webkit-scrollbar {
+        width: 8px;
+        height: 8px;
+    }
+    .paper-list::-webkit-scrollbar-track {
+        background: #1e1e1e;
+        border-radius: 4px;
+    }
+    .paper-list::-webkit-scrollbar-thumb {
+        background-color: #3c4b6c;
+        border-radius: 4px;
+        border: 2px solid #1e1e1e;
+    }
+    .paper-list::-webkit-scrollbar-thumb:hover {
+        background-color: #7c8db5;
+    }
+    /* removes arrows */
+    .paper-list::-webkit-scrollbar-button {
+        display: none;
+    }
+}
+
+/* Firefox */
+/* @supports (scrollbar-color: auto) { */
+@-moz-document url-prefix() {
+    .paper-list {
+        scrollbar-width: thin;
+        scrollbar-color: #505b74 #1e1e1e;
+    }
+}
+
 /* ------------------------------------------- */
 /* SHINY SPECIFIC OVERRIDES */
 /* ------------------------------------------- */
@@ -431,6 +469,9 @@ body {
 .main-area [class*="col-"] {
     padding: 0 !important;
 }
+
+
+
 
 /* ------------------------------------------- */
 /* RESPONSIVE ADJUSTMENTS */
